--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "moment": "^2.30.1",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
   }
